<resources>
    <string name="app_name">NTCLapp2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="nav_op1">About</string>
    <string name="nav_op2">Store Locator</string>
    <string name="nav_op3">Product Line</string>
    <string name="nav_subop1">Share</string>
    <string name="nav_subop2">Contact Us</string>
    <string name="nav_communicate">Communicate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="n3_selector1">search by location</string>
    <string name="n3_selector2">search by region</string>
    <string name="n2_search_button1">search by location</string>
    <string name="n2_search_button2">search by region</string>
</resources>
