<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_op1"
            android:icon="@drawable/ic_nav_about"
            android:title="@string/nav_op1" />

        <item
            android:id="@+id/nav_op2"
            android:icon="@drawable/ic_nav_maps"
            android:title="@string/nav_op2" />
        <item
            android:id="@+id/nav_op3"
            android:icon="@drawable/ic_nav_product_line"
            android:title="@string/nav_op3" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_subop1"
                android:icon="@drawable/ic_nav_share"
                android:title="@string/nav_subop1" />
            <item
                android:id="@+id/nav_subop2"
                android:icon="@drawable/ic_nav_contact"
                android:title="@string/nav_subop2" />
        </menu>
    </item>

</menu>
